// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds archer great items can destroy 28's 1`] = `
{
  "constitution": 5005,
  "dexterity": 238963,
  "intelligence": 5005,
  "luck": 12005,
  "strength": 5005,
  "willpower": 5005,
  "wisdom": 5005,
}
`;

exports[`builds archer normal items can kill level 5 mobs 1`] = `
{
  "constitution": 9,
  "dexterity": 102,
  "intelligence": 9,
  "luck": 15,
  "strength": 9,
  "willpower": 9,
  "wisdom": 9,
}
`;

exports[`builds archer trash items can kill level 1 mobs 1`] = `
{
  "constitution": 5,
  "dexterity": 5,
  "intelligence": 5,
  "luck": 5,
  "strength": 5,
  "willpower": 5,
  "wisdom": 5,
}
`;

exports[`builds archer uber items can deal destroy 32s at max level 1`] = `
{
  "constitution": 8458,
  "dexterity": 172913,
  "intelligence": 8458,
  "luck": 20288,
  "strength": 8458,
  "willpower": 21992,
  "wisdom": 21992,
}
`;

exports[`builds melee great items can destroy 28's 1`] = `
{
  "constitution": 7007,
  "dexterity": 84139,
  "intelligence": 7007,
  "luck": 8505,
  "strength": 162829,
  "willpower": 8408,
  "wisdom": 7007,
}
`;

exports[`builds melee normal items can kill level 5 mobs 1`] = `
{
  "constitution": 8,
  "dexterity": 44,
  "intelligence": 8,
  "luck": 11,
  "strength": 72,
  "willpower": 10,
  "wisdom": 8,
}
`;

exports[`builds melee trash items can kill level 1 mobs 1`] = `
{
  "constitution": 5,
  "dexterity": 7,
  "intelligence": 5,
  "luck": 5,
  "strength": 8,
  "willpower": 6,
  "wisdom": 5,
}
`;

exports[`builds melee uber items can deal destroy 32s at max level 1`] = `
{
  "constitution": 15394,
  "dexterity": 230878,
  "intelligence": 15394,
  "luck": 18685,
  "strength": 419927,
  "willpower": 18473,
  "wisdom": 15394,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 1`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 0,
  "victimDamage": 0,
  "victimHeal": 0,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 2`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 192,
  "victimDamage": 192,
  "victimHeal": 0,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 3`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 729,
  "victimDamage": 729,
  "victimHeal": 0,
}
`;

exports[`calculateEnchantmentDamage should calculate damage correctly 4`] = `
{
  "attackerDamage": 0,
  "attackerHeal": 874,
  "victimDamage": 874,
  "victimHeal": 0,
}
`;
